# Learning_py_to_prod-pypi

./: MANIFEST.in  README.md  notes.md  ohmyzsh.sh  pyproject.toml  readme.md  setup.cfg  setup.py  setup_.txt
cute_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
my_cute_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
packaging.egg-info/: PKG-INFO  SOURCES.txt
packaging/sub_package/: myfile.py
packaging_demo/: states_info.py
packaging_demo.egg-info/: PKG-INFO  SOURCES.txt
packaging_demo/sub_package/: myfile.py
packaging_demo_aravind.egg-info/: PKG-INFO  SOURCES.txt
packaging_demo_eric.egg-info/: PKG-INFO  SOURCES.txt
