[metadata]
name = my-cute-package
version = attr: packaging_demo.VERSION
author = Josiah Carberry
author_email = josiah_carberry@brown.edu
description = My package description
long_description = file: readme.md 
keywords = one, two
license = MIT
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    numpy 
    pandas 
    wheel 

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    executable-name = my_package.module:function

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*